[gd_scene load_steps=8 format=3 uid="uid://b0conm008atf8"]

[ext_resource type="Texture2D" uid="uid://m0gs2mtarcg0" path="res://kenney_new-platformer-pack-1.0/Sprites/Enemies/Double/barnacle_attack_a.png" id="1_40twr"]
[ext_resource type="Script" uid="uid://b51jfw2ebfk6" path="res://jefe.gd" id="1_vglgk"]
[ext_resource type="Texture2D" uid="uid://duiccgj4adxe8" path="res://kenney_new-platformer-pack-1.0/Sprites/Tiles/Double/bomb.png" id="2_vglgk"]
[ext_resource type="Texture2D" uid="uid://dvhntdto25omd" path="res://kenney_new-platformer-pack-1.0/Sprites/Enemies/Default/snail_shell.png" id="3_y5m53"]

[sub_resource type="Animation" id="Animation_piwxy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BarnacleAttackA/SnailShell/LanzaBomb:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BarnacleAttackA/SnailShell:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-23.0631, 49.5094)]
}

[sub_resource type="Animation" id="Animation_hgtak"]
resource_name = "Lanzar"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BarnacleAttackA/SnailShell/LanzaBomb:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.9, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BarnacleAttackA/SnailShell:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.633333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-23.0631, 49.5094), Vector2(-65.7297, 48.3019), Vector2(-5.76577, -38.6415), Vector2(48.4324, 33.8113)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.966667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"launch_bomb"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_akyrn"]
_data = {
&"Lanzar": SubResource("Animation_hgtak"),
&"RESET": SubResource("Animation_piwxy")
}

[node name="Boss" type="Node2D"]
script = ExtResource("1_vglgk")

[node name="BarnacleAttackA" type="Sprite2D" parent="."]
scale = Vector2(0.867188, 0.828125)
texture = ExtResource("1_40twr")

[node name="SnailShell" type="Sprite2D" parent="BarnacleAttackA"]
position = Vector2(-23.0631, 49.5094)
rotation = -2.01686
scale = Vector2(0.556344, 0.463885)
skew = -0.0369034
texture = ExtResource("3_y5m53")

[node name="LanzaBomb" type="Sprite2D" parent="BarnacleAttackA/SnailShell"]
position = Vector2(15.8503, 45.7498)
rotation = 1.97624
scale = Vector2(0.908386, 0.728502)
skew = 0.123294
texture = ExtResource("2_vglgk")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Bomb2" type="Sprite2D" parent="."]
position = Vector2(-74, 23)
scale = Vector2(0.343696, 0.316197)
texture = ExtResource("2_vglgk")

[node name="Bomb3" type="Sprite2D" parent="Bomb2"]
position = Vector2(8.72864, 22.1381)
scale = Vector2(0.975043, 0.808973)
texture = ExtResource("2_vglgk")

[node name="Bombas" type="Sprite2D" parent="Bomb2"]
position = Vector2(-93.1055, -3.16259)
scale = Vector2(0.971705, 0.781216)
texture = ExtResource("2_vglgk")

[node name="Bomba" type="Sprite2D" parent="Bomb2"]
position = Vector2(-75.6482, 63.2517)
scale = Vector2(0.949928, 0.937569)
texture = ExtResource("2_vglgk")

[node name="Bomba Recar" type="Sprite2D" parent="Bomb2"]
position = Vector2(17.4573, 72.7395)
scale = Vector2(0.855492, 0.670639)
texture = ExtResource("2_vglgk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_akyrn")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
